--- a/estilos/footer.css
+++ b/estilos/footer.css
@@ -10,7 +10,7 @@
 .container {
     background-color: black;
     color: rgba(255, 255, 255, 0.747);
-    height: 900px;
+    height: 100vh;
     max-width: 600px;
     display: flex;
     justify-content: center;
