--- a/estilos/footer.css
+++ b/estilos/footer.css
@@ -4,6 +4,7 @@
 * {
     padding: 0px;
     margin: 0px;
+    background-color: black;
 }
 
 
@@ -22,6 +23,7 @@
     height: 300px;
     width: 300px;
     border: 1px solid red;
+    background-color: black;
 
 }
 
